@@ -1,10 +1,9 @@
-@comment $NetBSD: PLIST,v 1.17 2006/04/17 07:07:37 jlam Exp $
+@comment $NetBSD: PLIST,v 1.18 2006/12/27 13:40:42 wulf Exp $
 bin/bluefish
 man/man1/bluefish.1
 share/application-registry/bluefish.applications
 share/applications/bluefish-project.desktop
 share/applications/bluefish.desktop
-@comment in sysutils/desktop-file-utils: share/applications/mimeinfo.cache
 share/bluefish/bluefish_splash.png
 share/bluefish/custom_menu.de.default
 share/bluefish/custom_menu.default
@@ -36,9 +35,9 @@ share/locale/es/LC_MESSAGES/bluefish.mo
 share/locale/eu/LC_MESSAGES/bluefish.mo
 share/locale/fi/LC_MESSAGES/bluefish.mo
 share/locale/fr/LC_MESSAGES/bluefish.mo
+share/locale/hu/LC_MESSAGES/bluefish.mo
 share/locale/it/LC_MESSAGES/bluefish.mo
 share/locale/ja/LC_MESSAGES/bluefish.mo
-share/locale/hu/LC_MESSAGES/bluefish.mo
 share/locale/no/LC_MESSAGES/bluefish.mo
 share/locale/pl/LC_MESSAGES/bluefish.mo
 share/locale/pt/LC_MESSAGES/bluefish.mo
